--- a/css/App.css
+++ b/css/App.css
@@ -144,4 +144,71 @@
     margin: 5px auto;
   }
 }
+
+.product-container {
+  width: 85%;
+  text-align: center;
+  margin: 10px auto;
+  border: 1px solid red;
+}
+
+.product-container .card-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  border: 1px solid green;
+}
+
+.product-container .card-container .card {
+  width: 290px;
+  height: 280px;
+  margin: 5px 10px;
+  border: 1px solid red;
+}
+
+.product-container .card-container .card img {
+  height: 75%;
+}
+
+.product-container .card-container .card .card-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 20%;
+  padding-top: 0;
+  background-color: grey;
+}
+
+.product-container .card-container .card .card-body .card-title {
+  padding: 0;
+}
+
+.product-container .card-container .card .card-body .card-subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product-container .card-container .card .card-body .card-subtitle .card-link {
+  padding: 1px 6px;
+  color: green;
+  cursor: pointer;
+  border: 1px solid yellow;
+}
 /*# sourceMappingURL=App.css.map */
